PROJ-1 added and removed files for backend bp

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,6 @@
-MONGO_URL="mongodb://0.0.0.0:27017/my-mongo-database"
+DB_PATH=mongodb://localhost:27017/project-book-db
+PORT=3000
+TOKEN_SECRET=VERY_SECRET_TOKEN
+GMAIL_EMAIL_ID=example@gmail.com
+GMAIL_EMAIL_PASSWORD=example@123
+FROM_EMAIL=example@gmail.com
