--- a/backend/package.json
+++ b/backend/package.json
@@ -6,16 +6,20 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "bcryptjs": "^2.4.3",
+    "@hapi/joi": "^17.1.1",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
-    "dotenv": "^16.3.1",
+    "dotenv": "^8.2.0",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.0.4",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
+    "mongoose": "^5.12.3",
     "morgan": "~1.9.1",
-    "nodemailer": "^6.9.8"
+    "nodemailer": "^6.5.0",
+    "nodemon": "^2.0.7",
+    "password-hash": "^1.2.2"
   }
 }
