--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "notiflix": "^3.2.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^6.21.2",
     "yup": "^1.3.3"
   },
